Bootstrap deleted and demand modified

--- a/shop/templates/shop/demand.html
+++ b/shop/templates/shop/demand.html
@@ -25,7 +25,7 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    {% for item in object %}
+                                    {% for item in demands_all %}
                 
                                             <tr class="bg-info text-light">
                                             <td>{{ forloop.counter}}</td>
