static images deleted and cloudinarry url added

--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -23,7 +23,7 @@
 
       <div class="carousel-item active" style="opacity:10;">
         <a href="{% url 'shop:enquiry' %}">
-            <img class="d-block w-100" alt="First slide [800x400]" style="height:29em;" src="{% static 'shop/images/Computer.png' %}" data-holder-rendered="true">
+            <img class="d-block w-100" alt="First slide [800x400]" style="height:29em;" src="https://res.cloudinary.com/webshine/image/upload/v1563643604/webshine/static/images/Computer.jpg" data-holder-rendered="true">
         <div class="carousel-caption d-block" style="opacity:4;">
             <h5 class="text-white bg-dark">We deals in </h5>
             <h1 class="text-danger">COMPUTERs</h1>
@@ -31,7 +31,7 @@
       </div>
       <div class="carousel-item" style="opacity:10;">
         <a href="{% url 'shop:enquiry' %}">
-          <img class="d-block w-100" alt="First slide [800x400]" style="height:29em;" src="{% static 'shop/images/cctv1.png' %}" data-holder-rendered="true">
+          <img class="d-block w-100" alt="First slide [800x400]" style="height:29em;" src="https://res.cloudinary.com/webshine/image/upload/v1563643604/webshine/static/images/cctv1.png" data-holder-rendered="true">
         <div class="carousel-caption d-block" style="opacity:4;">
             <h5 class="text-white bg-dark">We deals in </h5>
             <h1 class="text-danger">CCTVs</h1>
@@ -39,7 +39,7 @@
       </div>
        <div class="carousel-item" style="opacity:10;">
         <a href="{% url 'shop:enquiry' %}">
-           <img class="d-block w-100" alt="First slide [800x400]" style="height:29em;" src="{% static 'shop/images/printers.png' %}" data-holder-rendered="true">
+           <img class="d-block w-100" alt="First slide [800x400]" style="height:29em;" src="https://res.cloudinary.com/webshine/image/upload/v1563643604/webshine/static/images/printers.jpg" data-holder-rendered="true">
         <div class="carousel-caption d-block" style="opacity:4;">
             <h5 class="text-white bg-dark">We deals in </h5>
             <h1 class="text-danger">PRINTERs</h1>
@@ -47,7 +47,7 @@
            </div>
         <div class="carousel-item" style="opacity:10;">
         <a href="{% url 'shop:enquiry' %}">
-            <img class="d-block w-100" alt="First slide [800x400]" style="height:29em;" src="{% static 'shop/images/phone_ass.png' %}" data-holder-rendered="true">
+            <img class="d-block w-100" alt="First slide [800x400]" style="height:29em;" src="https://res.cloudinary.com/webshine/image/upload/v1563643605/webshine/static/images/phone_ass.png" data-holder-rendered="true">
         <div class="carousel-caption d-block" style="opacity:4;">
             <h5 class="text-white bg-dark">We deals in </h5>
             <h1 class="text-danger">Mobile Phone Accessories</h1>
