--- a/shop/templates/shop/services.html
+++ b/shop/templates/shop/services.html
@@ -4,37 +4,37 @@
 <div class="container-fluid marketing mb-5">
         <div class="row">
          <div class="text-center offset-lg-1 offset-md-1 offset-sm-1 offset-xs-1 col-lg-3 col-md-3 col-sm-5 col-xs-11 bg-light mt-3">
-            <img class="rounded-circle" src="{% static 'shop/images/amc.png' %}" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="https://res.cloudinary.com/webshine/image/upload/v1563643605/webshine/static/images/amc.png" alt="Generic placeholder image" width="140" height="140">
             <div class="bg-success mb-3"><h2>AMC</h2></div>
           </div>
           <div class="text-center offset-lg-1 offset-md-1 offset-sm-1 offset-xs-1 col-lg-3 col-md-3 col-sm-5 col-xs-11 bg-light mt-3">
-            <img class="rounded-circle" src="{% static 'shop/images/pc_maintenance.png' %}" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="https://res.cloudinary.com/webshine/image/upload/v1563661922/webshine/static/images/pc_maintenance.jpg" alt="Generic placeholder image" width="140" height="140">
               <div class="bg-success mb-3"><h2>PC Maintenance</h2></div>
           </div><!-- /.col-lg-4 -->
          <div class="text-center offset-lg-1 offset-md-1 offset-sm-1 offset-xs-1 col-lg-3 col-md-3 col-sm-5 col-xs-11 bg-light mt-3">
-            <img class="rounded-circle" src="{% static 'shop/images/optical-networking.png' %}" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="https://res.cloudinary.com/webshine/image/upload/v1563643604/webshine/static/images/optical-networking.png" alt="Generic placeholder image" width="140" height="140">
              <div class="bg-success mb-3"><h2>Networking</h2>
              </div>
           </div><!-- /.col-lg-4 -->
 
           <div class="text-center offset-lg-1 offset-md-1 offset-sm-1 offset-xs-1 col-lg-3 col-md-3 col-sm-5 col-xs-11 bg-light mt-3">
-            <img class="rounded-circle" src="{% static 'shop/images/cctv_icon.png' %}" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="https://res.cloudinary.com/webshine/image/upload/v1563643603/webshine/static/images/cctv_icon.jpg" alt="Generic placeholder image" width="140" height="140">
              <div class="bg-success mb-3">
                  <h2>CCTV</h2>
              </div>
           </div><!-- /.col-lg-4 -->
           <div class="text-center offset-lg-1 offset-md-1 offset-sm-1 offset-xs-1 col-lg-3 col-md-3 col-sm-5 col-xs-11 bg-light mt-3">
-            <img class="rounded-circle" src="{% static 'shop/images/printer.png' %}" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="https://res.cloudinary.com/webshine/image/upload/v1563643605/webshine/static/images/printer.jpg" alt="Generic placeholder image" width="140" height="140">
              <div class="bg-success mb-3"><h2>Printer</h2>
             </div>
           </div><!-- /.col-lg-4 -->
          <div class="text-center offset-lg-1 offset-md-1 offset-sm-1 offset-xs-1 col-lg-3 col-md-3 col-sm-5 col-xs-11 bg-light mt-3">
-            <img class="rounded-circle" src="https://res.cloudinary.com/webshine/image/upload/v1563643606/webshine/static/images/about_left1_dt4yf0.jpg" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="https://res.cloudinary.com/webshine/image/upload/v1563643606/webshine/static/images/about_left1.jpg" alt="Generic placeholder image" width="140" height="140">
              <div class="bg-success mb-3"><h2>Digital Services</h2>
             </div>
           </div>
           <div class="text-center offset-lg-1 offset-md-1 offset-sm-1 offset-xs-1 col-lg-3 col-md-3 col-sm-5 col-xs-11 bg-light mt-3">
-            <img class="rounded-circle" src="{% static 'shop/images/phone.png' %}" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="https://res.cloudinary.com/webshine/image/upload/v1563643605/webshine/static/images/phone.jpg" alt="Generic placeholder image" width="140" height="140">
              <div class="bg-success mb-3"><h2>Mobile Repairing</h2>
             </div>
           </div>  <!-- /.col-lg-4 -->
