--- a/shop/templates/shop/enquiry.html
+++ b/shop/templates/shop/enquiry.html
@@ -60,9 +60,9 @@
                                     <li class="list-group-item">Category: {{ item.category }}</li>
                                     <li class="list-group-item">Brand: {{ item.brand }}</li>
                                     <li class="list-group-item">Item: {{ item.item }}</li>
-                                    <li class="list-group-item">Type: {{ item.typep }}</li>
-                                    <li class="list-group-item">Spec: {{ item.specificationp }}</li>
-                                    <li class="list-group-item">Model: {{ item.Model_No }}</li>
+                                    <li class="list-group-item">Type: {{ item.item_type }}</li>
+                                    <li class="list-group-item">Spec: {{ item.item_specification }}</li>
+                                    <li class="list-group-item">Model: {{ item.model_no }}</li>
                                     <li class="list-group-item">Price : ₹{{ item.selling_price }}</li>
                                 </ul>
                             </div>
