--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -18,11 +18,10 @@ font-size:30px !important;
 
 .my-custom-scrollbar {
     position: relative;
-    height: 60%;
-    width: 100%;
+    height: 90%;
     overflow: auto;
 }
-table-wrapper-scroll-y {
+.table-wrapper-scroll-y {
     display: block;
 }
 
@@ -48,13 +47,13 @@ social-media-icons ul {
 }
 
 .demand1{
-    padding-left:10% !important;; 
-    padding-right:10% !important;;
-    padding-top:5% !important;;
+    padding-left:10% !important;
+    padding-right:10% !important;
+    padding-top:5% !important;
 
 }
 
 .demandtable{
-    padding-top:2% !important;;
+    margin-top:2% !important;
 
 }
