--- a/shop/templates/shop/enquiry.html
+++ b/shop/templates/shop/enquiry.html
@@ -57,13 +57,13 @@
                                     Featured
                                 </div>
                                 <ul class="list-group list-group-flush text-danger">
-                                    <li class="list-group-item">Category: {{ item.category }}</li>
-                                    <li class="list-group-item">Brand: {{ item.brand }}</li>
-                                    <li class="list-group-item">Item: {{ item.item }}</li>
-                                    <li class="list-group-item">Type: {{ item.item_type }}</li>
-                                    <li class="list-group-item">Spec: {{ item.item_specification }}</li>
-                                    <li class="list-group-item">Model: {{ item.model_no }}</li>
-                                    <li class="list-group-item">Price : ₹{{ item.selling_price }}</li>
+                                    <li class="list-group-item"><b>Category:</b> {{ item.category }}</li>
+                                    <li class="list-group-item"><b>Brand:</b> {{ item.brand }}</li>
+                                    <li class="list-group-item"><b>Item:</b> {{ item.item }}</li>
+                                    <li class="list-group-item"><b>Type:</b> {{ item.item_type }}</li>
+                                    <li class="list-group-item"><b>Spec:</b> {{ item.item_specification }}</li>
+                                    <li class="list-group-item"><b>Model:</b> {{ item.model_no }}</li>
+                                    <li class="list-group-item"><b>Price:</b> ₹{{ item.selling_price }}</li>
                                 </ul>
                             </div>
                          </div>
