--- a/shop/templates/shop/item_update.html
+++ b/shop/templates/shop/item_update.html
@@ -10,7 +10,7 @@
                 <form name="Update" action="" method="POST">
                     {% csrf_token %}
                     {{form|crispy}}&nbsp;
-                    <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Update</button>
+                    <button class="btn btn-sm btn-primary btn-block text-uppercase" type="submit">Update</button>
                 </form>
             </div>
         </div>
