--- a/shop/templates/shop/demand.html
+++ b/shop/templates/shop/demand.html
@@ -31,7 +31,7 @@
                     </thead>
                     <tbody>
                         {% for item in object %}
-                        <tr class="bg-info text-light">
+                        <tr class="bg-light text-dark">
                             <td>{{ forloop.counter}}</td>
                             <td>{{ item.item }}</td>
                             <td>{{ item.quantity }}</td>
