--- a/shop/templates/shop/footer.html
+++ b/shop/templates/shop/footer.html
@@ -1,36 +1,21 @@
-<!-- Footer -->
-<footer class="page-footer font-small blue pt-4">
+<footer class="footer navbar navbar-expand-md navbar-dark bg-dark">
+    <button class="navbar-toggler btn btn-primary" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon bg-primary"></span>
+    </button>
 
-    <!-- Footer Links -->
-    <div class="container-fluid text-center text-md-left">
-
-        <!-- Grid row -->
-        <div class="row">
-
-            <!-- Grid column -->
-            <div class="col-md-6 mt-md-0 mt-3">
-
-                <div class="social-media-icons col-xs-12">
-                <ul class="list-inline col-xs-12">
-                    <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-                    <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-                    <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
-                    <a href="#"><i class="fab fa-google-plus fa-2x"></i></a>
-                    <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-                </ul>
-            </div>
-            </div>
-            <!-- Grid column -->
-        <!-- Grid row -->
-
+    <div class="social-media-icons collapse navbar-collapse ml-auto mt-4" id="navbarsExample04">
+      <ul class="list-inline">
+                <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+                <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
+                <a href="#"><i class="fab fa-google-plus fa-2x"></i></a>
+                <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+            </ul>
+    
     </div>
-    <!-- Footer Links -->
 
-    <!-- Copyright -->
-    <div class="bg-dark footer-copyright text-center py-3">© 2019 Copyright:
-        <a href="#"> www.shinegroup.com</a>
+    <div class="collapse navbar-collapse justify-content-end mr-5" id="navbarsExample04">
+      
+        <div class="">© 2019 Copyright: <a href="#"> www.shinegroup.com</a></div>
     </div>
-    <!-- Copyright -->
-
-</footer>
-<!-- Footer -->
+  </footer>
