--- a/shop/templates/shop/notice.html
+++ b/shop/templates/shop/notice.html
@@ -9,7 +9,7 @@
                 <form name="notice" action="" method="POST">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <br><button class="btn btn-info" type="submit"><i class="fas fa-sign-in-alt text-light"> publish</i></button>
+                    <br><button class="btn btn-info" type="submit"><i class="fas fa-upload text-light"> publish</i></button>
                 </form>
             </div>
         </div>
