--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -1,19 +1,36 @@
+
+html {
+    position: relative;
+    min-height: 100%;
+  }
+  .body {
+    margin-bottom: 60px; /* Margin bottom by footer height */
+  }
+    
+  /* Custom page CSS
+  -------------------------------------------------- */
+  /* Not required for template or sticky footer method. */
+  
+  .container {
+    width: auto;
+    max-width: 680px;
+    padding: 0 15px;
+  }
 .bg-image{
-background: url(https://res.cloudinary.com/webshine/image/upload/v1563643604/webshine/static/images/mbbjpg.jpg)  !important;
+background: url(https://res.cloudinary.com/webshine/image/upload/v1583055894/back.jpg)  !important;
+
 }
 .logo{
 font-size:30px !important;
 }
 
-.foooter-text{
-    padding: -5px;
-}
-
 .footer {
-    position: relative;
+    position: absolute;
     bottom: 0;
-    width:100%;
-    padding-bottom: 1px;
+    width: 100%;
+    height:60px; /* Set the fixed height of the footer here */
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #f5f5f5;
 }
 
 .my-custom-scrollbar {
@@ -56,4 +73,13 @@ social-media-icons ul {
 .demandtable{
     margin-top:2% !important;
 
+}
+
+strong{
+    background-color: whitesmoke;
+    color: red
+}
+
+.notice{
+    height:395px;
 }
