--- a/shop/templates/shop/header.html
+++ b/shop/templates/shop/header.html
@@ -1,3 +1,3 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
-      <a class="navbar-brand logo" href="{% url 'shop:index' %}">Shinegroup</a>
+      <a class="navbar-brand logo text-dark font-weight-bold" href="{% url 'shop:index' %}">SHINEGROUP</a>
 </nav>
