--- a/shop/templates/shop/inventory_management.html
+++ b/shop/templates/shop/inventory_management.html
@@ -3,16 +3,49 @@
 {% load crispy_forms_tags %}
 {% block main_content %}
 
-<div class="container-fluid marketing mb-5">
-        <div class="row">
-         <div class="offset-lg-3 offset-md-3 offset-sm-3 offset-xs-3 col-6 pt-3">
+<div class="container-fluid marketing mb-1">
+    <div class="row">
+        <div class="text-dark font-weight-bold offset-lg-2 offset-md-2 offset-sm-2 offset-xs-2 col-8 pt-3">
             <form name="inventory" action="" method="POST">
-            {% csrf_token %}
-                {{ form|crispy }}
-            <br><button class="btn btn-sm btn-primary btn-block" type="submit">Save Data</button>
+                {% csrf_token %}
+                <div class="row">
+                    <div class="col">
+                        {{ form.item_class|as_crispy_field }}
+                    </div>
+                    <div class="col">
+                        {{ form.brand|as_crispy_field }}
+                    </div>
+                </div>
+                {{ form.item_type|as_crispy_field }}
+                {{ form.speaker|as_crispy_field }}
+                {{ form.storage|as_crispy_field }}
+                {{ form.camera|as_crispy_field }}
+                {{ form.dvr_smps|as_crispy_field }}
+                {{ form.comp_peripherals|as_crispy_field }}
+                {{ form.ups|as_crispy_field }}
+                {{ form.antivirus|as_crispy_field }}
+                {{ form.printer|as_crispy_field }}
+                {{ form.cctv|as_crispy_field }}
+                {{ form.kb_mouse|as_crispy_field }}
+                {{ form.item_specification|as_crispy_field }}
+                {{ form.user|as_crispy_field }}
+                {{ form.camera_spec|as_crispy_field }}
+                {{ form.storage_spec|as_crispy_field }}
+                {{ form.small_storage|as_crispy_field }}
+                {{ form.speaker_type|as_crispy_field }}
+                {{ form.model_no|as_crispy_field }}
+                <div class="row">
+                    <div class="col">
+                        {{ form.purchase_price|as_crispy_field }}
+                    </div>
+                    <div class="col">
+                        {{ form.selling_price|as_crispy_field }}
+                    </div>
+                </div>
+                <button class="btn btn-sm btn-primary btn-block" type="submit">Save Data</button>
             </form>
-         </div>
         </div>
+    </div>
 </div>
 
 {% endblock %}
